tests/invalid/Assign_Invalid_5.whiley
function f(bool x) -> int:
    return x
